# python_sio_poc

./: client.py  pyproject.toml  server.py
.vim/: coc-settings.json
cs/: client.cs  server.cs  test.cs
